update HeroSection layout for improved alignment and consistency; change 'birthdate' to 'birthday' in translations

--- a/src/languages/en/translation.json
+++ b/src/languages/en/translation.json
@@ -14,7 +14,7 @@
 		"Problem Solver": "Problem Solver",
 		"Software Developer": "Software Developer",
 		"description": "Specialized Technician in Digital Development, a creative Full Stack Developer with an analytical mindset, curiosity, and a passion for IT.",
-		"birthdate": "02/05/2002",
+		"birthday": "02/05/2002",
 		"Download CV": "Download CV"
 	}
 }
