--- a/src/languages/fr/translation.json
+++ b/src/languages/fr/translation.json
@@ -14,7 +14,7 @@
 		"Problem Solver": "Résolveur de problèmes",
 		"Software Developer": "Développeur logiciel",
 		"description": "Technicien spécialisé en développement numérique, un développeur Full Stack créatif avec un esprit analytique, de la curiosité et une passion pour l'informatique.",
-		"birthdate": "02/05/2002",
+		"birthday": "02/05/2002",
 		"Download CV": "Télécharger le CV"
 	}
 }
