--- a/src/languages/de/translation.json
+++ b/src/languages/de/translation.json
@@ -14,7 +14,7 @@
 		"Problem Solver": "Problemlöser",
 		"Software Developer": "Softwareentwickler",
 		"description": "Spezialisierter Techniker für digitale Entwicklung, ein kreativer Full-Stack-Entwickler mit analytischem Denken, Neugier und Leidenschaft für IT.",
-		"birthdate": "02.05.2002",
+		"birthday": "02.05.2002",
 		"Download CV": "Lebenslauf"
 	}
 }
