update resume PDF to reflect new education and experience details, improve layout and formatting

--- a/src/languages/de/translation.json
+++ b/src/languages/de/translation.json
@@ -16,5 +16,9 @@
 		"description": "Spezialisierter Techniker für digitale Entwicklung, ein kreativer Full-Stack-Entwickler mit analytischem Denken, Neugier und Leidenschaft für IT.",
 		"birthday": "02.05.2002",
 		"Download CV": "Lebenslauf"
+	},
+	"coming": {
+		"title": "Es kommt bald...",
+		"description": "Ich arbeite hart daran, dir ein erstaunliches Portfolio zu präsentieren. Bleib dran!"
 	}
 }
