--- a/src/languages/en/translation.json
+++ b/src/languages/en/translation.json
@@ -16,5 +16,9 @@
 		"description": "Specialized Technician in Digital Development, a creative Full Stack Developer with an analytical mindset, curiosity, and a passion for IT.",
 		"birthday": "02/05/2002",
 		"Download CV": "Download CV"
+	},
+	"coming": {
+		"title": "Coming Soon...",
+		"description": "I'm working hard to bring you an amazing Portfolio. Stay tuned!"
 	}
 }
